cmake_minimum_required(VERSION 3.8)


project(${PROJECT_NAME_CC} VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})


if (MSVC)
	add_compile_options(/W4)
else()
	add_compile_options(-Wall)
endif()
if (IDM_PLIST_LIBRARY_TYPE STREQUAL "STATIC")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -static")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -static")
endif()


set(CMAKE_IGNORE_PATH ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
message(STATUS "CMAKE_IGNORE_PATH : ${CMAKE_IGNORE_PATH}")


include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR})


set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)


add_definitions(-D_FILE_OFFSET_BITS=64)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
add_definitions(-D_WINSOCK_DEPRECATED_NO_WARNINGS)


aux_source_directory(${PROJECT_SOURCE_DIR} SRC)


if (CMAKE_BUILD_TYPE STREQUAL "Debug")
	link_libraries(cnary-${PROJECT_VERSION_SUFFIX}-d)
else ()
	link_libraries(cnary-${PROJECT_VERSION_SUFFIX})
endif ()
if (MINGW)
	link_libraries("stdc++")
endif()
if(${CMAKE_HOST_SYSTEM_NAME} MATCHES "android")
	link_libraries(android)
elseif(HAVE_PTHREAD_ONCE)
	link_libraries(pthread)
endif()
message(STATUS "HAVE_PTHREAD_ONCE : ${HAVE_PTHREAD_ONCE}")
message(STATUS "PROJECT_ROOT_DIR : ${PROJECT_ROOT_DIR}")


if (IDM_PLIST_LIBRARY_TYPE STREQUAL "STATIC")
	add_library(${PROJECT_NAME_CC}-${PROJECT_VERSION_SUFFIX} STATIC ${SRC})
	add_library(${PROJECT_NAME_CXX}-${PROJECT_VERSION_SUFFIX} STATIC ${SRC})
else()
	add_library(${PROJECT_NAME_CC}-${PROJECT_VERSION_SUFFIX} SHARED ${SRC})
	add_library(${PROJECT_NAME_CXX}-${PROJECT_VERSION_SUFFIX} SHARED ${SRC})
endif()


set_target_properties(${PROJECT_NAME_CC}-${PROJECT_VERSION_SUFFIX} PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR})
set_target_properties(${PROJECT_NAME_CXX}-${PROJECT_VERSION_SUFFIX} PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR})
set_target_properties(${PROJECT_NAME_CC}-${PROJECT_VERSION_SUFFIX} PROPERTIES DEBUG_POSTFIX -d)
set_target_properties(${PROJECT_NAME_CXX}-${PROJECT_VERSION_SUFFIX} PROPERTIES DEBUG_POSTFIX -d)


if (IDM_PLIST_LIBRARY_TYPE STREQUAL "STATIC")
	install(TARGETS ${PROJECT_NAME_CC}-${PROJECT_VERSION_SUFFIX} ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
	install(TARGETS ${PROJECT_NAME_CXX}-${PROJECT_VERSION_SUFFIX} ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
else()
	install(TARGETS ${PROJECT_NAME_CC}-${PROJECT_VERSION_SUFFIX} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
	install(TARGETS ${PROJECT_NAME_CXX}-${PROJECT_VERSION_SUFFIX} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
endif()
install(DIRECTORY ${PROJECT_ROOT_DIR}/include/${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
